completed home page

--- a/css/style.css
+++ b/css/style.css
@@ -137,3 +137,15 @@
 }
 
 /* Carousel image  ENDED */
+
+
+/* FONT CSS STARTED*/
+
+.project-heading {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+
+
+/* FONT CSS ENDED*/
